hphp/hack/test/typecheck/abstract_typeconsts/multiple-definitions/trait_require_extends_use.php.exp
ERROR: File "trait_require_extends_use.php", line 36, characters 28-39:
Invalid type hint (Typing[4090])
  File "trait_require_extends_use.php", line 36, characters 38-39:
  No type constant `T2` in `UpperBound1`
  File "trait_require_extends_use.php", line 3, characters 11-21:
  Declaration of `UpperBound1` is here
